--- a/hyprland/keybinds.conf
+++ b/hyprland/keybinds.conf
@@ -68,3 +68,5 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+bind = $mainMod SHIFT, R, exec, pkill waybar && waybar
