--- a/hyprland/monitors.conf
+++ b/hyprland/monitors.conf
@@ -5,3 +5,6 @@
 monitor=DP-2,preferred,0x0,1
 monitor=eDP-1,preferred,auto,1
 monitor=,preferred,auto,auto
+
+workspace=1,monitor:DP-2
+workspace=2,monitor:DP-2
