--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,5 +1,7 @@
 wallpaper {
     monitor = *
-    path=/home/dumitru/Pictures/wallpaper.jpg
-    fit_mode=cover
+    path = /home/dumitru/Pictures/wallpaper.jpg
+    fit_mode = cover
 }
+
+splash = false
