--- a/hyprland/keybinds.conf
+++ b/hyprland/keybinds.conf
@@ -70,3 +70,8 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 bind = $mainMod SHIFT, R, exec, pkill waybar && waybar
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, F, fullscreen, 0
+bind = $mainMod SHIFT, P, exec, hyprpicker -a
+bind = $mainMod, L, exec, hyprlock
+bind = , Print, exec, hyprshot -m output -o ~/Pictures/Screenshots
