--- a/hyprland/variables.conf
+++ b/hyprland/variables.conf
@@ -1,6 +1,7 @@
-$terminal = alacritty
+$terminal = kitty
 $fileManager = $terminal -e yazi
 $menu = hyprlauncher
+$browser = firefox
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
