--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -3,5 +3,6 @@ source = autostart.conf
 source = input.conf
 source = keybinds.conf
 source = monitors.conf
+source = theme.conf
 source = misc.conf
 
